# CSM-LIO

./: .gitignore  CMakeLists.txt  InfinitySLAM_README.md  README.md  package.xml
cmake/: functions.cmake
config/: core_map_builder.lua  core_pose_graph.lua  core_trajectory_builder.lua  core_trajectory_builder_3d.lua  csmlio_config.lua  ros_config_default.yaml  ros_wrapper_options.yaml  slam_config.lua  wgh_backpack_3d_localization.lua
csmlio/common/: config.h.cmake  configuration_file_resolver.cc  configuration_file_resolver.h  fixed_ratio_sampler.cc  fixed_ratio_sampler.h  histogram.cc  histogram.h  lua.h  lua_parameter_dictionary.cc  lua_parameter_dictionary.h  math.h  port.h  task.cc  task.h  thread_pool.cc  thread_pool.h  time.cc  time.h
csmlio/io/: color.cc  color.h  coloring_points_processor.cc  coloring_points_processor.h  counting_points_processor.cc  counting_points_processor.h  draw_trajectories.cc  draw_trajectories.h  fake_file_writer.cc  fake_file_writer.h  fake_file_writer_test.cc  file_writer.cc  file_writer.h  fixed_ratio_sampling_points_processor.cc  fixed_ratio_sampling_points_processor.h  frame_id_filtering_points_processor.cc  frame_id_filtering_points_processor.h  hybrid_grid_points_processor.cc  hybrid_grid_points_processor.h  image.cc  image.h  intensity_to_color_points_processor.cc  intensity_to_color_points_processor.h  min_max_range_filtering_points_processor.cc  min_max_range_filtering_points_processor.h  null_points_processor.h  outlier_removing_points_processor.cc  outlier_removing_points_processor.h  pcd_writing_points_processor.cc  pcd_writing_points_processor.h  ply_writing_points_processor.cc  ply_writing_points_processor.h  points_batch.cc  points_batch.h  points_processor.h  points_processor_pipeline_builder.cc  points_processor_pipeline_builder.h  points_processor_pipeline_builder_test.cc  probability_grid_points_processor.cc  probability_grid_points_processor.h  (+14 more)
csmlio/lio/: csm_lidar_inertial_odometry.cc  csm_lidar_inertial_odometry.h  csm_lio_interface.h  detect_floors.cc  detect_floors.h  grid_interface.h  id.h  imu_tracker.cc  imu_tracker.h  map_builder_interface.cc  map_builder_interface.h  pose_extrapolator.cc  pose_extrapolator.h  pose_extrapolator_interface.cc  pose_extrapolator_interface.h  pose_graph.cc  pose_graph.h  pose_graph_interface.h  probability_values.cc  probability_values.h  range_data_inserter_interface.cc  range_data_inserter_interface.h  submaps.h  trajectory_builder_interface.cc  trajectory_builder_interface.h  trajectory_node.cc  trajectory_node.h  utility.cc  utility.h  value_conversion_tables.cc  value_conversion_tables.h
csmlio/sensor/: collator_interface.h  compressed_point_cloud.cc  compressed_point_cloud.h  data.h  fixed_frame_pose_data.cc  fixed_frame_pose_data.h  imu_data.cc  imu_data.h  landmark_data.cc  landmark_data.h  map_by_time.h  odometry_data.cc  odometry_data.h  point_cloud.cc  point_cloud.h  range_data.cc  range_data.h  rangefinder_point.h  timed_point_cloud_data.cc  timed_point_cloud_data.h
csmlio/transform/: rigid_transform.cc  rigid_transform.h  timestamped_transform.cc  timestamped_transform.h  transform.cc  transform.h  transform_interpolation_buffer.cc  transform_interpolation_buffer.h
docs/: CMakeLists (bkp0218).txt  README(废弃).md  更新日志.txt
infinityslam/common/: blocking_queue.h  fixed_ratio_sampler.cc  fixed_ratio_sampler.h  histogram.cc  histogram.h  incremental_cube.h  math.h  mutex_lock_types.h  numeric_types.h  optional.cc  optional.h  port.h  rate_timer.h  system_options.cc  system_options.h  task.cc  task.h  thread_pool.cc  thread_pool.h  time.cc  time.h  work_queue.h
infinityslam/csmlio/: csm_lidar_inertial_odometry.cc  csm_lidar_inertial_odometry.h  csm_lio_interface.h  csm_lio_type_def.cc  csm_lio_type_def.h  grid_interface.h  id.h  imu_tracker.cc  imu_tracker.h  optimization_type_def.h  pose_extrapolator.cc  pose_extrapolator.h  pose_extrapolator_interface.cc  pose_extrapolator_interface.h  probability_values.cc  probability_values.h  range_data_collator.cc  range_data_collator.h  range_data_inserter_interface.cc  range_data_inserter_interface.h  submaps.h  trajectory_node.cc  trajectory_node.h  value_conversion_tables.cc  value_conversion_tables.h
infinityslam/ieskf/: iESKF_readme.md
infinityslam/io/: file_writer.cc  file_writer.h  pcd_writing_points_processor.cc  pcd_writing_points_processor.h  points_batch.cc  points_batch.h  points_processor.h  points_processor_pipeline_builder.cc  points_processor_pipeline_builder.h  points_processor_pipeline_builder_test.cc  yaml_io.cc  yaml_io.h
infinityslam/sensor/: collator_interface.h  data.h  imu_data.cc  imu_data.h  landmark_data.cc  landmark_data.h  map_by_time.h  odometry_data.cc  odometry_data.h  point_cloud.cc  point_cloud.h  point_cloud_type.cc  point_cloud_type.h  point_type.h  points_batch.cc  points_batch.h  range_data.cc  range_data.h  rangefinder_point.h  timed_point_cloud_data.cc  timed_point_cloud_data.h
infinityslam/transform/: rigid_transform.cc  rigid_transform.h  timed_pose.cc  timed_pose.h  timed_pose_interpolation_buffer.cc  timed_pose_interpolation_buffer.h  timestamped_transform.cc  timestamped_transform.h  transform.cc  transform.h  transform_interpolation_buffer.cc  transform_interpolation_buffer.h
infinityslam/utils/: eigen_quaternion_from_two_vectors.cc  eigen_quaternion_from_two_vectors.h  imu_aided_pose_interpolator.cc  imu_aided_pose_interpolator.h  imu_integration.h  imu_tracker.cc  imu_tracker.h  motion_compensator.cc  motion_compensator.h  motion_filter.cc  motion_filter.h  utility.cc  utility.h  value_conversion_tables.cc  value_conversion_tables.h
infinityslam_ros/launch/: run_csmlio_with_home_made_dataset.launch  run_csmlio_with_liosam_dataset.launch  run_csmlio_with_urbanloc_dataset.launch  wgh_backpack_3d.launch
infinityslam_ros/rviz/: csmlio_ui.rviz  wgh_z_rosbag_3d.rviz
infinityslam_ros/src/: csmlio_node_main.cc  csmlio_wrapper.cc  csmlio_wrapper.h  mapping_node_main.cc  msg_conversion.cc  msg_conversion.h  node_constants.cc  node_constants.h  node_options.cc  ros_map.cc  (+21 more)
(+358 files in other folders)
